# picar-Robot-Cpp

./: .gitignore  OpenCV.sln  README.md
ConsoleApplication1/: ConsoleApplication1.vcxproj  ConsoleApplication1.vcxproj.filters  Main.cpp  Main.h  Tutorial.cpp  mat_mask_operations.cpp
Project1/: Project1.vcxproj
PythonTest/: PythonTest.py  PythonTest.pyproj
PythonTest/Python 3.7 (32 bit)/Scripts/: Activate.ps1  activate  activate.bat
RobotApp/: CMakeLists.txt  Config.cpp  Config.h  Motor.cpp  Motor.h  PCA9685.cpp  RobotApp.cpp  RobotApp.h  RobotApp.vcxproj  RobotApp.vcxproj.filters  Scripts.cpp  Scripts.h  Servo.cpp  Servo.h  Stream.cpp  Stream.h  readme.md  setup.py
RobotWeb/: RobotWeb.pyproj  config.txt  db.sqlite3  manage.py
RobotWeb/RobotWeb/: config  settings.py  urls.py  views.py  wsgi.py
RobotWeb/RobotWeb/bot/: bot.py
RobotWeb/RobotWeb/driver/: PCF8591.py  __init__.py  back_wheels.py  camera.py  front_wheels.py
RobotWeb/RobotWeb/driver/SunFounder_PCA9685/: PCA9685.py  Servo.py
RobotWeb/RobotWeb/driver/SunFounder_TB6612/: TB6612.py
RobotWeb/RobotWeb/stream/: lanefilter.py  lanefilter2.py  lanefilter3.py  stream.py
RobotWeb/RobotWeb/templates/templates/: cali.html  run.html
superfastcode/: module.cpp  superfastcode.vcxproj  superfastcode.vcxproj.filters
superfastcode2/: module.cpp  superfastcode2.vcxproj  superfastcode2.vcxproj.filters
